[package]
name = "dr9k"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-util = {version = "0.15", features = ["builder"]}
twilight-model = "0.15"
tokio = {version = "1.28", features = ["rt-multi-thread", "macros"]}
java-properties = "2.0"
chrono = "0.4"
tap = "1"
if_chain = "1"
anyhow = "1"

serde = "1"
serde_json = "1"

log = "0.4"
simple_logger = "4.1"

konst = "0.3"
